--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serverless-domain-manager": "^3.2.6",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
+    "set-value": "^3.0.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
     "tslint": "^5.16.0",
